--- a/little-lemon/src/App.css
+++ b/little-lemon/src/App.css
@@ -28,11 +28,25 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  /* top right bottom left*/
+  margin:20px 20vw 0px 20vw;
+}
+
+.flex-container {
+  display :flex;
+  justify-content: space-between;
+}
+
+
+.nav-list {
+  display:flex;
+  list-style:none
+}
+.nav-item{
+  margin-right:2vw
+}
+
+.nav-login{
+  margin-left: 3vw
 }
