--- a/little-lemon/src/App.css
+++ b/little-lemon/src/App.css
@@ -37,7 +37,8 @@
 
 .section {
   flex:1;
-
+  height: 400px;
+  max-width: 50%;
 }
 
 .serverImg{
@@ -46,49 +47,14 @@
   border-radius:20px;
 }
 
-
-
-@media (max-width: 1200px) {
-  .nav-list{
-      flex-direction:column;
-      align-items:center;
-      /* visibility: hidden; */
-  }
-
-  .container{
-    margin: 0px 0px 0px 0px;
-  }
-
-  .flex-container{
-    flex-direction:column;
-    justify-content: center;
-  }
-
-  .nav-item{
-    justify-content: center;
-  }
-
-  .nav-login{
-    justify-content: center;
-  }
-
-}
-
-/* Add this to the bottom of your CSS file */
-
 .image-wrapper {
   position: relative;
-  z-index: 1; /* Default layer */
+  z-index: 1; 
+  transform: translateY(10%);
 }
 
-.serverImg {
-  position: absolute;
-  top: 100%;        /* Push it below the section */
-  left: 50%;
-  transform: translateX(-50%) translateY(50px); /* Center + float up */
-  z-index: 0;       /* Behind the container */
-  width: 300px;
-  height: 400px;
-  border-radius: 20px;
-  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.25);
+.section-right{
+  display:flex;
+  justify-content: right;
+
 }
